# interfaces/handler/demo.handler.go
@@ -1,106 +1,0 @@
-package handler
-
-import (
-	"github.com/gin-gonic/gin"
-	"github.com/google/wire"
-	"github.com/linzhengen/ddd-gin-admin/application"
-	"github.com/linzhengen/ddd-gin-admin/domain/schema"
-	"github.com/linzhengen/ddd-gin-admin/infrastructure/ginx"
-)
-
-var DemoSet = wire.NewSet(wire.Struct(new(Demo), "*"))
-
-type Demo struct {
-	DemoSrv *application.Demo
-}
-
-func (a *Demo) Query(c *gin.Context) {
-	ctx := c.Request.Context()
-	var params schema.DemoQueryParam
-	if err := ginx.ParseQuery(c, &params); err != nil {
-		ginx.ResError(c, err)
-		return
-	}
-
-	params.Pagination = true
-	result, err := a.DemoSrv.Query(ctx, params)
-	if err != nil {
-		ginx.ResError(c, err)
-		return
-	}
-
-	ginx.ResPage(c, result.Data, result.PageResult)
-}
-
-func (a *Demo) Get(c *gin.Context) {
-	ctx := c.Request.Context()
-	item, err := a.DemoSrv.Get(ctx, c.Param("id"))
-	if err != nil {
-		ginx.ResError(c, err)
-		return
-	}
-	ginx.ResSuccess(c, item)
-}
-
-func (a *Demo) Create(c *gin.Context) {
-	ctx := c.Request.Context()
-	var item schema.Demo
-	if err := ginx.ParseJSON(c, &item); err != nil {
-		ginx.ResError(c, err)
-		return
-	}
-
-	item.Creator = ginx.GetUserID(c)
-	result, err := a.DemoSrv.Create(ctx, item)
-	if err != nil {
-		ginx.ResError(c, err)
-		return
-	}
-	ginx.ResSuccess(c, result)
-}
-
-func (a *Demo) Update(c *gin.Context) {
-	ctx := c.Request.Context()
-	var item schema.Demo
-	if err := ginx.ParseJSON(c, &item); err != nil {
-		ginx.ResError(c, err)
-		return
-	}
-
-	err := a.DemoSrv.Update(ctx, c.Param("id"), item)
-	if err != nil {
-		ginx.ResError(c, err)
-		return
-	}
-	ginx.ResOK(c)
-}
-
-func (a *Demo) Delete(c *gin.Context) {
-	ctx := c.Request.Context()
-	err := a.DemoSrv.Delete(ctx, c.Param("id"))
-	if err != nil {
-		ginx.ResError(c, err)
-		return
-	}
-	ginx.ResOK(c)
-}
-
-func (a *Demo) Enable(c *gin.Context) {
-	ctx := c.Request.Context()
-	err := a.DemoSrv.UpdateStatus(ctx, c.Param("id"), 1)
-	if err != nil {
-		ginx.ResError(c, err)
-		return
-	}
-	ginx.ResOK(c)
-}
-
-func (a *Demo) Disable(c *gin.Context) {
-	ctx := c.Request.Context()
-	err := a.DemoSrv.UpdateStatus(ctx, c.Param("id"), 2)
-	if err != nil {
-		ginx.ResError(c, err)
-		return
-	}
-	ginx.ResOK(c)
-}
