# interfaces/swagger/swagger.yaml
@@ -1,36 +1,5 @@
 basePath: /
 definitions:
-  schema.Demo:
-    properties:
-      code:
-        description: Code
-        type: string
-      created_at:
-        description: CreatedAt
-        type: string
-      creator:
-        description: Creator
-        type: string
-      id:
-        description: ID
-        type: string
-      memo:
-        description: Memo
-        type: string
-      name:
-        description: Name
-        type: string
-      status:
-        description: Status(1:enable 2:disable)
-        type: integer
-      updated_at:
-        description: UpdatedAt
-        type: string
-    required:
-    - code
-    - name
-    - status
-    type: object
   schema.ErrorItem:
     properties:
       code:
@@ -381,215 +350,6 @@ paths:
       summary: HealthCheck
       tags:
       - HealthCheck
-  /api/v1/demos:
-    get:
-      parameters:
-      - default: 1
-        description: Current page
-        in: query
-        name: current
-        required: true
-        type: integer
-      - default: 10
-        description: Page size
-        in: query
-        name: pageSize
-        required: true
-        type: integer
-      - description: Search value
-        in: query
-        name: queryValue
-        type: string
-      responses:
-        "200":
-          description: Search result
-          schema:
-            $ref: '#/definitions/schema.ListResult'
-        "401":
-          description: '{error:{code:0,message:Unauthorized}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-        "500":
-          description: '{error:{code:0,message:SystemError}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-      security:
-      - ApiKeyAuth: []
-      summary: Search demo
-      tags:
-      - Demo
-    post:
-      parameters:
-      - description: Create
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/schema.Demo'
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/schema.IDResult'
-        "400":
-          description: '{error:{code:0,message:BadRequest}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-        "401":
-          description: '{error:{code:0,message:Unauthorized}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-        "500":
-          description: '{error:{code:0,message:SystemError}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-      security:
-      - ApiKeyAuth: []
-      summary: Create
-      tags:
-      - Demo
-  /api/v1/demos/{id}:
-    delete:
-      parameters:
-      - description: UUID
-        in: path
-        name: id
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{status:OK}'
-          schema:
-            $ref: '#/definitions/schema.StatusResult'
-        "401":
-          description: '{error:{code:0,message:Unauthorized}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-        "500":
-          description: '{error:{code:0,message:SystemError}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-      security:
-      - ApiKeyAuth: []
-      summary: Delete
-      tags:
-      - Demo
-    get:
-      parameters:
-      - description: UUID
-        in: path
-        name: id
-        required: true
-        type: string
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/schema.Demo'
-        "401":
-          description: '{error:{code:0,message:Unauthorized}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-        "404":
-          description: '{error:{code:0,message:NotFound}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-        "500":
-          description: '{error:{code:0,message:SystemError}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-      security:
-      - ApiKeyAuth: []
-      summary: Search by ID
-      tags:
-      - Demo
-    put:
-      parameters:
-      - description: UUID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Update
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/schema.Demo'
-      responses:
-        "200":
-          description: '{status:OK}'
-          schema:
-            $ref: '#/definitions/schema.StatusResult'
-        "400":
-          description: '{error:{code:0,message:BadRequest}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-        "401":
-          description: '{error:{code:0,message:Unauthorized}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-        "500":
-          description: '{error:{code:0,message:SystemError}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-      security:
-      - ApiKeyAuth: []
-      summary: Update
-      tags:
-      - Demo
-  /api/v1/demos/{id}/disable:
-    patch:
-      parameters:
-      - description: UUID
-        in: path
-        name: id
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{status:OK}'
-          schema:
-            $ref: '#/definitions/schema.StatusResult'
-        "401":
-          description: '{error:{code:0,message:Unauthorized}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-        "500":
-          description: '{error:{code:0,message:SystemError}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-      security:
-      - ApiKeyAuth: []
-      summary: Disable
-      tags:
-      - Demo
-  /api/v1/demos/{id}/enable:
-    patch:
-      parameters:
-      - description: UUID
-        in: path
-        name: id
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{status:OK}'
-          schema:
-            $ref: '#/definitions/schema.StatusResult'
-        "401":
-          description: '{error:{code:0,message:Unauthorized}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-        "500":
-          description: '{error:{code:0,message:SystemError}}'
-          schema:
-            $ref: '#/definitions/schema.ErrorResult'
-      security:
-      - ApiKeyAuth: []
-      summary: Enable
-      tags:
-      - Demo
   /api/v1/menus:
     get:
       parameters:
